--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            width: 80px; /* Adjust size */
+            width: 150px; /* Increased size for better visibility */
             height: auto;
         }
 
@@ -269,6 +269,14 @@
 
         section {
             display: none;
+        }
+
+        /* Portfolio Image Styling */
+        .portfolio-item img {
+            max-width: 150px; /* Restricts the image width to a smaller size */
+            height: auto;
+            object-fit: cover;
+            border-radius: 10px;
         }
 
     </style>
