--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                         <button class="see-details-btn">See Details</button>
                         <div class="project-description">
                             <p>
-                                I contributed to an in-depth analysis and report titled "Solving The Net-Zero-Equation For Norway" under the guidance of Professor Maxime Schenckery. The project focused on outlining Norway's pathway to achieving net-zero emissions by 2050. This involved identifying key technological innovations, necessary economic adjustments, and societal changes that Norway, as one of the world’s largest oil and gas producers, must implement to align with its climate targets.
+                                I contributed to an in-depth analysis and report titled "Solving The Net-Zero-Equation For Norway". The project focused on outlining Norway's pathway to achieving net-zero emissions by 2050. This involved identifying key technological innovations, necessary economic adjustments, and societal changes that Norway, as one of the world’s largest oil and gas producers, must implement to align with its climate targets.
                                 <br><br>
                                 In my role, I analyzed technological innovations and supply chain requirements, with an emphasis on green technologies such as carbon capture and storage (CCS), hydrogen, and biofuels. Additionally, I examined Norway's advancements in renewable energy, including hydropower, solar, and wind, which place the country at the forefront of Europe's energy transition.
                                 <br><br>
